code fix up backend
