# root/Backend/swagger_output.json
@@ -231,8 +231,8 @@
         "tags": [
           "Partie"
         ],
-        "summary": "Add player to a Partie",
-        "description": "",
+        "summary": "Add player to a game",
+        "description": "This request is used to add a player into a game. The game must be pending and it has not reached the player limit.   The id of the game is in the link and the player you wish to add should be specified in the request body.",
         "parameters": [
           {
             "name": "id",
@@ -246,23 +246,50 @@
             "type": "string"
           },
           {
+            "name": "gameId",
+            "in": "path",
+            "description": "The ID of the game to add the player to.",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "obj",
             "in": "body",
-            "description": "id_partie:req.params.id ,id_role:nom-rôle,id_joueur:nom du joueur,statut:vivant/mort",
+            "description": "The player's username.",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "id_role": {
+                "type": {
                   "type": "string",
-                  "example": "loup"
+                  "example": "object"
                 },
-                "id_joueur": {
-                  "type": "string",
-                  "example": "fye"
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "id_joueur": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "description": {
+                          "type": "string",
+                          "example": "The username of the player to add to the game."
+                        }
+                      }
+                    }
+                  }
                 },
-                "statut": {
-                  "type": "string",
-                  "example": "vivant"
+                "required": {
+                  "type": "array",
+                  "example": [
+                    "id_joueur"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
                 }
               }
             }
@@ -270,7 +297,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "The player was added to the game successfully."
+          },
+          "400": {
+            "description": "The request was invalid, check that id_joueur is present."
+          },
+          "403": {
+            "description": "The game is an a pending state."
+          },
+          "500": {
+            "description": "An error occurred while processing the request."
           }
         }
       }
@@ -280,8 +316,8 @@
         "tags": [
           "Partie"
         ],
-        "summary": "New Partie",
-        "description": "",
+        "summary": "Create a new game",
+        "description": "This request is used to create a new game with the specified parameters.",
         "parameters": [
           {
             "name": "x-access-token",
@@ -291,7 +327,7 @@
           {
             "name": "obj",
             "in": "body",
-            "description": "heure_debut,nb_participant,hote_name,duree_jour,duree_nuit,statut ",
+            "description": "The following values should be placed in the body of the request: heure_debut, nb_participant, hote_name,  duree_jour, duree_nuit, statut, proba_pouvoir_speciaux, proportion_loup",
             "schema": {
               "type": "object",
               "properties": {
@@ -319,25 +355,13 @@
                   "type": "string",
                   "example": "en attente"
                 },
-                "roles": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string",
-                        "example": "loup"
-                      },
-                      "nombre": {
-                        "type": "string",
-                        "example": "2"
-                      }
-                    },
-                    "required": [
-                      "name",
-                      "nombre"
-                    ]
-                  }
+                "proba_pouvoir_speciaux": {
+                  "type": "string",
+                  "example": "0.3"
+                },
+                "proportion_loup": {
+                  "type": "string",
+                  "example": "0.3"
                 }
               },
               "required": [
@@ -347,14 +371,57 @@
                 "duree_jour",
                 "duree_nuit",
                 "statut",
-                "roles"
+                "proba_pouvoir_speciaux",
+                "proportion_loup"
               ]
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Game created successfully."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Invalid request parameters."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Bad Request"
+          },
+          "500": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal server error."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Internal Server Error"
           }
         }
       }
